# claude-usage-widget

./: .gitignore  README.md  design-qa.md  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: AUDIT_BASELINE.md  PERFORMANCE.md
scripts/: hide-window.vbs  install-startup.ps1  patch-wix.ps1  start-monitor.bat  start-widget.bat
src/: index.html  main.js  styles.css  usage-utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  lib.rs  main.rs  providers.rs
tests/: frontend.test.mjs  usage-utils.test.js
